--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       const result = input.split('?')[0]; // Split the string by '?' and return the first part
       const displayArea = document.getElementById('outputText');
       if (result) {
-        displayArea.innerHTML = `<a href="${result}" target="_blank">Click here to visit: ${result}</a>`;
+        displayArea.innerHTML = `<a href="${result}" target="_blank">Here is your unblocked tiktok: ${result}</a>`;
       } else {
         displayArea.textContent = "Please enter a valid input!";
       }
